@@ -27,6 +27,7 @@ For 4.9.1
     TODO: Show command invoked when checking script syntax
     TODO: Update status item menu default icon to high res version
 
+    * New help button in main application window
     * Previewing status item menu now shows actual script output instead of placeholder text
     * Status menu items can now only have a title or an icon, not both, due to changes in Mac OS X
     * Show Shell Command window now shows install status of command line tool
